# streamlit-werewolf-ui

./: .env  .env.example  README.md  firstgit.html  main.py  pyproject.toml  requirements.txt  run_deepseek.bat
game/: config_models.py  engine.py  narrator.py  phase.py  roles.py  rules.py  state.py  win_check.py
llm/: deepseek_provider.py  mock_provider.py  prompts.py  provider.py
players/: ai_player.py  base_player.py  human_player.py  memory.py  personalities.py  reasoning.py
solo_werewolf_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ui/: cli.py  io.py  streamlit_app.py
utils/: config.py  logger.py
