[project]
name = "solo-werewolf-ai"
version = "0.2.0"
description = "Single-player Werewolf game with configurable rules and Streamlit UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.40.0"]
ui = ["streamlit>=1.40.0"]

[project.scripts]
werewolf-cli = "main:main"

[tool.setuptools]
packages = ["game", "players", "ui", "llm", "utils"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
